// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package tutorial;
// [END declaration]

// [START csharp_declaration]
option csharp_namespace = "BasecampEndpoint.Protobuf";
// [END csharp_declaration]

// [START messages]
message BasecampMessageBoardMessage {

  message MessageData {
	string type = 1;
  }
  
    message GithubData {
	string commitSha = 1;
  }
  
  message BasecampData {
	string messageBoardMessageId = 1;
	string projectId = 2;
  }

  repeated MessageData message = 1;
  repeated GithubData githubData = 2;
  repeated BasecampData basecampData = 3;
}
// [END messages]